--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="android/src"/>
 	<classpathentry kind="src" path="android/build/.apt_generated"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/opt/android-sdk/platforms/android-23/android.jar"/>
-	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/5.5.1.GA/android/titanium.jar"/>
-	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/5.5.1.GA/android/kroll-common.jar"/>
-	<classpathentry kind="lib" path="/Library/Application Support/Titanium/mobilesdk/osx/5.5.1.GA/android/kroll-apt.jar"/>
+	<classpathentry kind="lib" path="/opt/android-sdk/platforms/android-28/android.jar"/>
+	<classpathentry kind="lib" path="/Users/fuerst/Library/Application Support/Titanium/mobilesdk/osx/8.0.0.GA/android/titanium.jar"/>
+	<classpathentry kind="lib" path="/Users/fuerst/Library/Application Support/Titanium/mobilesdk/osx/8.0.0.GA/android/kroll-common.jar"/>
+	<classpathentry kind="lib" path="/Users/fuerst/Library/Application Support/Titanium/mobilesdk/osx/8.0.0.GA/android/kroll-apt.jar"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
