--- a/.project
+++ b/.project
@@ -5,11 +5,15 @@
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>com.appcelerator.titanium.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
- <nature>org.eclipse.jdt.core.javanature</nature>
-
 		<nature>com.appcelerator.titanium.mobile.module.nature</nature>
+		<nature>com.appcelerator.titanium.mobile.nature</nature>
 		<nature>com.aptana.projects.webnature</nature>
 	</natures>
 </projectDescription>
